--- a/Project 2 Right/styles.css
+++ b/Project 2 Right/styles.css
@@ -123,3 +123,5 @@ form > p { margin: 5px 0; }
 #info {
 	margin: 10%;
 }
+
+h3{text-decoration:none;text-transform:uppercase;color:#000;display:block;padding:15px;margin:20px 0 0 0;font-size:100%;text-align:center;background-image: -webkit-gradient(linear, left top, left bottom, from(#f6dfad), to(#c7924c));-webkit-box-shadow: 5px 5px 5px #888;}
